# qtqt_displayer

./: .gitignore  README.md  main.py  main_no_interface.py  pyproject.toml  requirements.txt  structure.txt
.spyproject/config/backups/: workspace.ini.bak
displayer/: __init__.py
displayer/core/: __init__.py  controller.py  savers.py  workers.py
displayer/data/: __init__.py  datatypes.py  parser.py  utils.py
displayer/plotting/: __init__.py  customfig.py  plotter.py  utils.py
displayer/ui/: dialogs.py  main_window.py
displayer/ui/ressources/: history_help.txt
examples/: Forward - Gautheron chemin D.txt  Gerin - eU15_tto_fix.txt  test_data.txt  test_tto_fix.txt
scripts/: main.py  main_no_interface.py  test_function.py  test_type_donne.py
src/displayer/: __init__.py
src/displayer/app/: __init__.py  cli.py  gui.py
src/displayer/core/: __init__.py  controller.py  savers.py  workers.py
src/displayer/data/: __init__.py  datatypes.py  parser.py  utils.py
src/displayer/plotting/: __init__.py  customfig.py  plotter.py  utils.py
src/displayer/ressources/: Models parameters.xlsx
src/displayer/ui/: dialogs.py  main_window.py
src/displayer/ui/ressources/: ages_help.txt  history_help.txt  infos_help.txt  likelihood_help.txt  posterior_help.txt
tests/: test_core.py  test_data.py  test_plotter.py  test_ui.py
