[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtqt_displayer"
version = "1.0.0"
description = "Library to help for QTQt output representation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Alexis Derycke", email="alexis.derycke@hotmail.com" }
]

dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "pyrolite",
  "PySide6",
  "scipy",
  "tqdm",
  "xarray"
]
